--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
   margin: 0;
   margin-bottom: 40vh;
 
-  border: 1px solid black;
+  border: 2px solid black;
   background-color: white;
   border-radius: 10px;
 
@@ -40,7 +40,12 @@ body {
 }
 
 .cell {
-  padding: 5px;
+  padding: 15px;
 
   border: 1px solid black;
+  cursor: pointer;
+}
+
+.cell_chosen {
+  background-color: rgb(167, 197, 243);
 }
